# phyjax2d

./: .gitignore  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchmark/: bench_phyjax2d.py  bench_phyjax2d_xpbd.py  bench_pymunk.py
smoke-tests/: falling.py
src/phyjax2d/: __init__.py  impl.py  moderngl_vis.py  raycast.py  utils.py  vec2d.py
tests/: test_contact.py  test_overlap.py  test_polygon.py  test_raycast.py  test_step.py  test_tree.py
